// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Label should render fixed label correctly 1`] = `
<View
  accessibilityLabel="fixed-label-box"
  accessible={true}
  style={
    [
      {
        "flexDirection": "row",
        "marginBottom": 4,
      },
    ]
  }
  testID="fixed-label-box"
>
  <Text
    accessibilityLabel="fixed-label"
    accessible={true}
    style={
      [
        {
          "color": "#6E7787",
          "fontFamily": "Rubik-Medium",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 14,
        },
      ]
    }
    testID="fixed-label"
  >
    Label
  </Text>
</View>
`;

exports[`Input Label should render fixed label with optional correctly 1`] = `
<View
  accessibilityLabel="fixed-label-box"
  accessible={true}
  style={
    [
      {
        "flexDirection": "row",
        "marginBottom": 4,
      },
    ]
  }
  testID="fixed-label-box"
>
  <Text
    accessibilityLabel="fixed-label"
    accessible={true}
    style={
      [
        {
          "color": "#6E7787",
          "fontFamily": "Rubik-Medium",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 14,
        },
      ]
    }
    testID="fixed-label"
  >
    Label
  </Text>
</View>
`;

exports[`Input Label should render null when not has a label 1`] = `null`;

exports[`Input Label should render outlined label correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={{}}
>
  <View
    accessibilityLabel="outlined-label-box"
    accessible={true}
    style={
      [
        {
          "flexDirection": "row",
          "height": 54,
        },
      ]
    }
    testID="outlined-label-box"
  >
    <Text
      collapsable={false}
      style={{}}
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Input Label should render outlined label with optional correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={{}}
>
  <View
    accessibilityLabel="outlined-label-box"
    accessible={true}
    style={
      [
        {
          "flexDirection": "row",
          "height": 54,
        },
      ]
    }
    testID="outlined-label-box"
  >
    <Text
      collapsable={false}
      style={{}}
    >
      Label
    </Text>
  </View>
</View>
`;
